# poetry-lock-docker

./: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.split  README.md  build-split.sh  build.sh  pyproject.toml
poetry_lock_docker/: __init__.py
tests/: test_poetry_lock_docker.py
