[tool.poetry]
name = "poetry-lock-docker"
version = "0.1.0"
description = ""
authors = ["Bram Neijt <bram@neijt.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
pyramid = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry-lock-package = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
